# qemu_hack

./: meson.build  null.d
builddir/meson-logs/: meson-log.txt
hack/: callbackhelper.h  main.c  meson.build  type.h
hack/glue_callback/: callback_glue_.c  callback_glue_.h  callback_glue_accel_kvm.c  callback_glue_accel_kvm.h  callback_glue_accel_tcg.c  callback_glue_accel_tcg.h  callback_glue_audio.c  callback_glue_audio.h  callback_glue_authz.c  callback_glue_authz.h  callback_glue_backends.c  callback_glue_backends.h  callback_glue_backends_tpm.c  callback_glue_backends_tpm.h  callback_glue_block.c  callback_glue_block.h  callback_glue_chardev.c  callback_glue_chardev.h  callback_glue_crypto.c  callback_glue_crypto.h  callback_glue_ebpf.c  callback_glue_ebpf.h  callback_glue_hw_9pfs.c  callback_glue_hw_9pfs.h  callback_glue_hw_acpi.c  callback_glue_hw_acpi.h  callback_glue_hw_adc.c  callback_glue_hw_adc.h  callback_glue_hw_alpha.c  callback_glue_hw_alpha.h  callback_glue_hw_arm.c  callback_glue_hw_arm.h  callback_glue_hw_audio.c  callback_glue_hw_audio.h  callback_glue_hw_block.c  callback_glue_hw_block.h  callback_glue_hw_block_dataplane.c  callback_glue_hw_block_dataplane.h  callback_glue_hw_char.c  callback_glue_hw_char.h  (+134 more)
ui/: console.c
