
hack_ss = ss.source_set()
hack_ss.add(files(
  'callback_glue_.c',
'callback_glue_nbd.c',
'callback_glue_audio.c',
'callback_glue_util.c',
'callback_glue_accel_kvm.c',
'callback_glue_accel_tcg.c',
'callback_glue_hw_ide.c',
'callback_glue_hw_sparc.c',
'callback_glue_hw_s390x.c',
'callback_glue_hw_input.c',
'callback_glue_hw_audio.c',
'callback_glue_hw_vfio.c',
'callback_glue_hw_i2c.c',
'callback_glue_hw_rtc.c',
'callback_glue_hw_ssi.c',
'callback_glue_hw_arm.c',
'callback_glue_hw_sd.c',
'callback_glue_hw_scsi.c',
'callback_glue_hw_adc.c',
'callback_glue_hw_hyperv.c',
'callback_glue_hw_watchdog.c',
'callback_glue_hw_mips.c',
'callback_glue_hw_gpio.c',
'callback_glue_hw_misc.c',
'callback_glue_hw_misc_macio.c',
'callback_glue_hw_usb.c',
'callback_glue_hw_sparc64.c',
'callback_glue_hw_nubus.c',
'callback_glue_hw_sh4.c',
'callback_glue_hw_acpi.c',
'callback_glue_hw_block.c',
'callback_glue_hw_block_dataplane.c',
'callback_glue_hw_rdma.c',
'callback_glue_hw_rdma_vmw.c',
'callback_glue_hw_dma.c',
'callback_glue_hw_i386.c',
'callback_glue_hw_i386_xen.c',
'callback_glue_hw_mem.c',
'callback_glue_hw_tpm.c',
'callback_glue_hw_ppc.c',
'callback_glue_hw_intc.c',
'callback_glue_hw_hppa.c',
'callback_glue_hw_remote.c',
'callback_glue_hw_xen.c',
'callback_glue_hw_char.c',
'callback_glue_hw_pci.c',
'callback_glue_hw_core.c',
'callback_glue_hw_net.c',
'callback_glue_hw_net_can.c',
'callback_glue_hw_alpha.c',
'callback_glue_hw_timer.c',
'callback_glue_hw_9pfs.c',
'callback_glue_hw_pci-host.c',
'callback_glue_hw_display.c',
'callback_glue_hw_nvram.c',
'callback_glue_hw_virtio.c',
'callback_glue_hw_isa.c',
'callback_glue_hw_nvme.c',
'callback_glue_authz.c',
'callback_glue_scsi.c',
'callback_glue_monitor.c',
'callback_glue_qom.c',
'callback_glue_ui.c',
'callback_glue_migration.c',
'callback_glue_softmmu.c',
'callback_glue_block.c',
'callback_glue_backends.c',
'callback_glue_backends_tpm.c',
'callback_glue_target_sparc.c',
'callback_glue_target_s390x.c',
'callback_glue_target_s390x_kvm.c',
'callback_glue_target_arm.c',
'callback_glue_target_arm_hvf.c',
'callback_glue_target_mips_tcg.c',
'callback_glue_target_i386.c',
'callback_glue_target_i386_kvm.c',
'callback_glue_target_ppc.c',
'callback_glue_target_hppa.c',
'callback_glue_target_riscv.c',
'callback_glue_linux-user.c',
'callback_glue_chardev.c',
'callback_glue_net.c',
'callback_glue_crypto.c',
'callback_glue_io.c',
'callback_glue_qapi.c',
'callback_glue_ebpf.c',

))
    